# site

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  sitecustomize.py  soc_console  vite.config.js
.github/workflows/: ci-deploy-pages.yml
.prae/: works.json
cli-server/: Dockerfile  README.md  content.go  fly.toml  gemini.go  go.mod  main.go  ssh.go
cli-server/repl/: dsl.go  hash.go  render.go  samples.go  strings.go  wav.go
cli-server/scripts/: dev-bootstrap.sh
data/: scene_script.json  tmux_layouts.json
data/dossiers/: 01_cybernetics_paper.json  02_letgo.json  03_the_tub.json  04_praetorius.json  05_dexdrones.json
docs/: about.html  blog.html  feed-worker-setup.md  index.html  tmayd-labs-route.md
docs/works/: index.html
public/: CNAME  humans.txt  robots.txt
public/.well-known/: cli-letter.txt
public/content/: labs.md  recent.md
public/labs/: every-speed-independent-gate-fix.patch  leaf-cross-block-independence-fix.patch  leaf-scheduler-block-local-cursor-fix.patch
public/press/: seb-suarez-long-bio.txt  seb-suarez-short-bio.txt
public/works-console/: app.css  app.js  index.html  script.js
scripts/: build-repl-cm.mjs  generate-repl-samples.mjs  repl-cm-entry.js  tmux_bootstrap.sh  tmux_switch_layout.sh  write-version.mjs
src/: App.jsx
src/soc_console/: __init__.py  cli.py  commands.py  contracts.py  tui.py  (+12 more)
tests/: test_commands.py  test_contracts.py  test_integration_ingest.py  test_reasoning.py  test_rehearsal.py  test_stage_engine.py  test_tmux.py
worker/: wrangler.toml
(+78 files in other folders)
