[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-console"
version = "0.1.0"
description = "Second-Order Cybernetic Portfolio Console for CalArts final talk"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Seb + Codex" }]
dependencies = [
  "textual>=0.67.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
soc-console = "soc_console.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
